--- a/spring-boot/spring-boot-sharding-jdbc/pom.xml
+++ b/spring-boot/spring-boot-sharding-jdbc/pom.xml
@@ -28,5 +28,19 @@
             <scope>runtime</scope>
             <version>8.0.16</version>
         </dependency>
+        <dependency>
+            <groupId>io.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>3.0.0.M1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 </project>
