--- a/spring-boot/spring-boot-sharding-jdbc/src/main/resources/application.properties
+++ b/spring-boot/spring-boot-sharding-jdbc/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 server.port=8080
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/seata_order?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.main.allow-bean-definition-overriding=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/seata_order?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+sharding.jdbc.datasource.names=dm0,ds0
+sharding.jdbc.datasource.dm0.type=com.alibaba.druid.pool.DruidDataSource
+sharding.jdbc.datasource.dm0.driver-class-name=com.mysql.jdbc.Driver
+sharding.jdbc.datasource.dm0.url=jdbc:mysql://47.103.25.169:3306/orders?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+sharding.jdbc.datasource.dm0.username=root
+sharding.jdbc.datasource.dm0.password=root
+sharding.jdbc.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
+sharding.jdbc.datasource.ds0.driver-class-name=com.mysql.jdbc.Driver
+sharding.jdbc.datasource.ds0.url=jdbc:mysql://47.103.25.169:3307/orders?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+sharding.jdbc.datasource.ds0.username=root
+sharding.jdbc.datasource.ds0.password=root
+sharding.jdbc.config.masterslave.name=ms
+sharding.jdbc.config.masterslave.master-data-source-name=dm0
+sharding.jdbc.config.masterslave.slave-data-source-names=ds0
+sharding.jdbc.config.props.sql.show=true
