--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-boot-sharding-jdbc</module>
+        <module>distributed-lock</module>
     </modules>
 
 
