--- a/spring-boot/spring-boot-sharding-jdbc/pom.xml
+++ b/spring-boot/spring-boot-sharding-jdbc/pom.xml
@@ -29,9 +29,14 @@
             <version>8.0.16</version>
         </dependency>
         <dependency>
-            <groupId>io.shardingsphere</groupId>
+            <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
-            <version>3.0.0.M1</version>
+            <version>4.0.0-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-namespace</artifactId>
+            <version>4.0.0-RC1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
